WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83678
Global variable predictions should not be coalesced unnecessarily
https://bugs.webkit.org/show_bug.cgi?id=83678
Summary
Global variable predictions should not be coalesced unnecessarily
Filip Pizlo
Reported
2012-04-11 00:47:28 PDT
The DFG still coalesces all predictions for all global variables even though it isn't strictly necessary. This is a holdover from when we would sometimes compile code without having complete predictions for the entire code block, and would have no way of recompiling later - so we needed to play strange games to "fill in" predictions for those parts of the code block that we wanted to optimize but for which we had no profiling data. But these days we either manager to get all of the profiling we need before compiling things (because of our well now mature heuristics) or we trigger recompilation upon repeated attempts to execute code that did not have profiling data. Either way, in steady state, all running DFG code will have ample profiling information.
Attachments
the patch
(13.54 KB, patch)
2012-04-11 00:53 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-04-11 00:53:14 PDT
Created
attachment 136639
[details]
the patch
Geoffrey Garen
Comment 2
2012-04-11 08:18:44 PDT
Comment on
attachment 136639
[details]
the patch r=me
Benjamin Poulain
Comment 3
2012-04-13 00:52:28 PDT
Could this have caused the regression in Bindings/event-target-wrapper? The regression:
http://webkit-perf.appspot.com/graph.html#tests=[[8062,2001,32196]]&sel=1334183542158.416,1334203959676.6643,90.90909090909076,1386.3636363636363&displayrange=7&datatype=running
The delta:
http://trac.webkit.org/log/?rev=113906&stop_rev=113898&verbose=on
This is the only non-trivial commit in this delta.
Eric Seidel (no email)
Comment 4
2013-01-04 00:52:40 PST
Attachment 136639
[details]
was posted by a committer and has review+, assigning to Filip Pizlo for commit.
Filip Pizlo
Comment 5
2013-02-20 14:26:54 PST
This was fixed ages ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug