Global variable predictions should not be coalesced unnecessarily https://bugs.webkit.org/show_bug.cgi?id=83678

Reviewed by Geoff Garen.

Removed the PredictionTracker and everyone who used it. Converted GetGlobalVar
to have a heapPrediction like a civilized DFG opcode ought to.

No performance effect.

* GNUmakefile.list.am:
* JavaScriptCore.xcodeproj/project.pbxproj:
* bytecode/CodeBlock.h:
* bytecode/PredictionTracker.h: Removed.
* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
* dfg/DFGGenerationInfo.h:
* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::dump):
* dfg/DFGGraph.h:
(Graph):
* dfg/DFGNode.h:
(JSC::DFG::Node::hasHeapPrediction):
* dfg/DFGPredictionPropagationPhase.cpp:
(JSC::DFG::PredictionPropagationPhase::propagate):



Canonical link: https://commits.webkit.org/101202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113906 268f45cc-cd09-0410-ab3c-d52691b4dbfc