Source/JavaScriptCore/dfg/DFGGenerationInfo.h
@@ -1,3 +1,4 @@
+
 /*
  * Copyright (C) 2011 Apple Inc. All rights reserved.
  *
